--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,21 @@
 {
-  "extends" : [ " react-app " , " react-app/jest " ]
+  "extends" : ["plugin:react/recommended", "eslint:recommended"],
+  "plugins" : ["react", "@typescript-eslint"],
+  "env": {
+    "browser": true,
+    "es6": true,
+    "commonjs": true
+  },
+  "rules": {
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "vars": "all",
+        "args": "after-used",
+        "ignoreRestSiblings": false
+      }
+    ]
+  }, 
+  "parser": "@typescript-eslint/parser"
+
 }
