--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsc && vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -15,6 +16,7 @@
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
@@ -24,6 +26,8 @@
     "eslint": "^8.33.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.6.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vite": "^4.1.0"
   }
