--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.6",
+    "@babel/preset-env": "^7.22.6",
+    "@babel/preset-typescript": "^7.22.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -23,10 +29,12 @@
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "@vitejs/plugin-react": "^3.1.0",
+    "babel-jest": "^29.6.0",
     "eslint": "^8.33.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.6.0",
+    "jest-environment-jsdom": "^29.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vite": "^4.1.0"
