--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "babel-jest": "^29.6.0",
     "eslint": "^8.33.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-testing-library": "^5.11.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.0",
     "jest-environment-jsdom": "^29.6.0",
