--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsc && vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --verbose --coverage && open ./coverage/lcov-report/index.html "
   },
   "dependencies": {
     "@babel/plugin-syntax-jsx": "^7.22.5",
