--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-testing-library": "^5.11.0",
+    "history": "^5.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.0",
     "jest-environment-jsdom": "^29.6.0",
